2008-07-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* Consts.cs.in; Update FxFileVersion and VsFileVersion for 2.0 SP1.

2008-04-13  Jb Evain  <jbevain@novell.com>

	* Consts.cs.in: update the 2.1 profile versions.
	Merged from the Moonlight 2 branch.

2008-04-09  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Consts.cs.in: Add common strings for assembly attributes

2007-12-31  Gert Driesen  <drieseng@users.sourceforge.net>

	* Consts.cs.in: Add corlib assembly name.

2007-12-04  Marek Safar  <marek.safar@gmail.com>

	* Consts.cs.in: Update 3.5 to RTM version number.
	
2007-08-20  Marek Safar  <marek.safar@gmail.com>

	* Consts.cs.in: Add NET_3_5 constants.
	
2007-06-12  Marek Safar  <marek.safar@gmail.com>

	* Consts.cs.in: Add NET_2_1 constants.
	
2007-06-01  Atsushi Enomoto  <atsushi@ximian.com>

	* MonoTODOAttribute.cs : fixed regression that those derived todo
	  attribute types are not reported in the class status pages.

2006-12-14  Eyal Alaluf <eyala@mainsoft.com>

	* MonoTODOAttribute.cs: Add MonoDocumentationNoteAttribute,
	  MonoExtensionAttribute, MonoInternalNoteAttribute,
	  MonoLimitationAttribute and MonoNotSupportedAttribute. These
	  attribute will be used to describe the status of the Mono APIs.

2006-09-06  Kornél Pál  <kornelpal@gmail.com>

	* Makefile: Removed TestConfiguration.cs.

2006-06-07  Kornél Pál  <kornelpal@gmail.com>

	* Consts.cs.in: Removed RuntimeVersion as it should be the same as
	  FxFileVersion. Use FxFileVersion for Environment.Version.

2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* Consts.cs.in: Removed obsolete using System.Runtime.InteropServices.

2005-11-03  Kornél Pál  <kornelpal@hotmail.com>

	* Consts.cs.in: Added FxFileVersion for use in assemblies instead of
	  RuntimeVersion.

2005-11-03  Kornél Pál  <kornelpal@hotmail.com>

	* Consts.cs.in: Added VsFileVersion that is used by assemblies.

2005-11-03  Kornél Pál  <kornelpal@hotmail.com>
