@@ -1,3 +1,7 @@
+2008-08-20  Jb Evain  <jbevain@novell.com>
+
+	* Consts.cs.in: add NET_3_0 case for wcf.
+
 2008-07-24  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* Consts.cs.in; Update FxFileVersion and VsFileVersion for 2.0 SP1.
